force-app/main/default/objects/Assignment_Config__mdt/Assignment_Config__mdt.object-meta.xml
<CustomObject>
    <label>Assignment Config</label>
    <pluralLabel>Assignment Configs</pluralLabel>
</CustomObject>