force-app/main/default/objects/Assignment_Config__mdt/fields/Distance_Weight__c.field-meta.xml
<CustomField>
    <fullName>Distance_Weight__c</fullName>
    <label>Distance Weight</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>