force-app/main/default/objects/Assignment_Config__mdt/fields/Max_Distance_Km__c.field-meta.xml
<CustomField>
    <fullName>Max_Distance_Km__c</fullName>
    <label>Max Distance (km)</label>
    <precision>6</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>