force-app/main/default/objects/Assignment_Config__mdt/fields/Max_Workload__c.field-meta.xml
<CustomField>
    <fullName>Max_Workload__c</fullName>
    <label>Max Workload</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>