force-app/main/default/objects/Assignment_Config__mdt/fields/Skill_Weight__c.field-meta.xml
<CustomField>
    <fullName>Skill_Weight__c</fullName>
    <label>Skill Weight</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>