force-app/main/default/objects/Assignment_Config__mdt/fields/Workload_Weight__c.field-meta.xml
<CustomField>
    <fullName>Workload_Weight__c</fullName>
    <label>Workload Weight</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>